fix: add correct letter-spacing to the logo

--- a/style.css
+++ b/style.css
@@ -120,7 +120,7 @@ img {
   text-align: left;
   color: #ffffff;
   text-transform: uppercase;
-  letter-spacing: -0.4px;
+  letter-spacing: -0.7px;
 }
 
 .logo__sup {
